# solana-startup-terminal

./: .gitignore  Cargo.toml  README.md
accounts/: Cargo.toml  README.md
accounts/src/: main.rs
tokens/: Cargo.toml  README.md
tokens/src/: cli.rs  main.rs  mint.rs  token_account.rs
transactions/: Cargo.toml  README.md
transactions/src/: main.rs
