[workspace]
name = "workshop"
resolver = "3"
members = [
    "accounts",
    "transactions",
    "tokens"
]

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.86.0"

[workspace.dependencies]
solana-client = "3.1.9"
solana-sdk = { version = "3.0.0", features = ["full"] }
solana-cli-config = "3.1.9"
solana-account-decoder = "3.1.9"
solana-system-interface = {version = "3.1.0", features = ["bincode"]}
solana-compute-budget-interface = {version = "3.0.0"}
solana-transaction-status = "3.1.9"

anchor-client = "0.32.1"
anchor-spl = "0.32.1"

spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
mpl-token-metadata = { git = "https://github.com/metaplex-foundation/mpl-token-metadata" }

anyhow = "1.0.71"
bincode = "1.3.3"
chrono = "0.4.26"
borsh = "1.6.0"

clap = { version = "4.5", features = ["derive"] }
